# gday

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  dist-workspace.toml  pre-push  todo.txt
.github/workflows/: check.yml  ci.yml  release.yml  test.yml
demo/: demo.sh
gday/: CHANGELOG.md  Cargo.toml  README.md
gday/src/: base32.rs  dialog.rs  file.rs  main.rs  peer_code.rs  protocol.rs  tests.rs  transfer.rs
gday/wix/: main.wxs
gday_contact_exchange_protocol/: CHANGELOG.md  Cargo.toml  README.md
gday_contact_exchange_protocol/src/: lib.rs  tests.rs
gday_contact_exchange_protocol/tests/: integration_test.rs  test_integration.rs
gday_contact_exchange_server/: Cargo.toml
gday_contact_exchange_server/src/: main.rs  state.rs  tests.rs
gday_encryption/: CHANGELOG.md  Cargo.toml  README.md
gday_encryption/benches/: benchmark.rs
gday_encryption/src/: helper_buf.rs  lib.rs  test.rs
gday_encryption/tests/: integration_test.rs  test_integration.rs
gday_encryption_async/: Cargo.toml
gday_encryption_async/src/: helper_buf.rs  lib.rs  reader.rs  test.rs  writer.rs
gday_file_offer_protocol/: Cargo.toml  README.md
gday_file_offer_protocol/src/: lib.rs  tests.rs
gday_file_transfer/: CHANGELOG.md  Cargo.toml  README.md
gday_file_transfer/src/: file_meta.rs  lib.rs  msg.rs  offer.rs  partial_download.rs  save_path.rs  tests.rs  transfer.rs
gday_file_transfer/tests/: integration_test.rs  test_file_meta.rs  test_integration.rs  test_offer.rs
gday_gui/: Cargo.toml  README.md
gday_gui/src/: app.rs  helpers.rs  logger.rs  logic.rs  main.rs
gday_hole_punch/: CHANGELOG.md  Cargo.toml  README.md
gday_hole_punch/src/: contact_sharer.rs  hole_puncher.rs  lib.rs  peer_code.rs  server_connector.rs
gday_hole_punch/tests/: integration_test.rs  test_integration.rs  test_peer_code.rs
gday_server/: Cargo.toml  README.md
gday_server/src/: connection_handler.rs  lib.rs  main.rs  state.rs  tests.rs
gday_server/tests/: integration_test.rs  test_integration.rs
gday_server/wix/: main.wxs
other/: demo.sh  gday_server.service  pre-push  rate_limiter.sh  systemd_service.txt
other/demo/: demo.cast
