[workspace]
resolver = "2"

members = [
    "gday",
    "gday_server",
    "gday_hole_punch",
    "gday_encryption",
    "gday_contact_exchange_protocol",
    "gday_file_transfer",
]

# Config for 'cargo dist'
# specifying build dependencies for aws-lc-sys
[workspace.metadata.dist.dependencies.homebrew]
llvm = '*'
cmake = '*'
go = '*'


[workspace.metadata.dist.dependencies.apt]
clang = '*'
cmake = '*'
golang = '*'


[workspace.metadata.dist.dependencies.chocolatey]
clang = '*'
cmake = '*'
go = '*'

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
