[workspace]
resolver = "2"

members = [
    "gday",
    "gday_server",
    "gday_hole_punch",
    "gday_encryption",
    "gday_contact_exchange_protocol",
    "gday_file_transfer",
]

# Keys that workspace packages will inherit
[workspace.package]
authors = ["Marcin Anforowicz"]
edition = "2021"
license = "MIT"
repository = "https://github.com/manforowicz/gday/"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "manforowicz/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Marcin's additional cargo dist config

# Switch from .tar.gz to .tar.xz
unix-archive = ".tar.gz"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
