[workspace]
resolver = "2"

members = [
    "gday",
    "gday_server",
    "gday_hole_punch",
    "gday_encryption",
    "gday_contact_exchange_protocol",
    "gday_file_transfer",
]

# Keys that workspace packages will inherit
[workspace.package]
authors = ["Marcin Anforowicz"]
edition = "2024"
license = "MIT"
repository = "https://github.com/manforowicz/gday/"
version = "0.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
