[package]
name = "gday"
description = "Command line tool to securely send files (without a relay or port forwarding)."
categories = ["command-line-utilities", "network-programming", "filesystem"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstream = "0.6.20"
anstyle = "1.0.11"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
gday_encryption = { version = "0.5.0", path = "../gday_encryption" }
gday_file_transfer = { version = "0.5.0", path = "../gday_file_transfer" }
gday_hole_punch = { version = "0.5.0", path = "../gday_hole_punch" }
indicatif = "0.18.0"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
