[package]
name = "gday_contact_exchange_protocol"
version = "0.1.1"
description = "Protocol for peers to exchange their socket addresses via a server."
homepage = "https://github.com/manforowicz/gday/tree/main/gday_contact_exchange_protocol"
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["test-util", "macros"] }
