[package]
name = "gday_contact_exchange_protocol"
description = "Protocol for peers to exchange their socket addresses via a server."
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["test-util", "macros"] }
