[package]
name = "gday_encryption"
description = "Simple encrypted ChaCha20Poly1305 wrapper around an IO stream."
homepage = "https://github.com/manforowicz/gday/tree/main/gday_encryption"
categories = ["cryptography"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
pin-project = "1.1.7"
rand = "0.8.5"
tokio = { version = "1.41.1", features = ["io-util"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.41.1", features = ["net", "rt", "macros"] }

[[bench]]
name = "benchmark"
harness = false
