[package]
name = "gday_encryption"
description = "Simple encrypted ChaCha20Poly1305 wrapper around an async IO stream."
categories = ["cryptography"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
pin-project = "1.1.10"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["io-util"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["async_tokio"] }
tokio = { version = "1.45.1", features = ["net", "rt", "macros"] }

[[bench]]
name = "benchmark"
harness = false
