[package]
name = "gday_encryption_async"
version = "0.1.0"
authors = ["Marcin Anforowicz"]
edition = "2021"
description = "A simple async ChaCha20Poly1305 encryption wrapper around an IO stream."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
pin-project-lite = "0.2.13"
tokio = "1.36.0"

[dev-dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false }
tokio = { version = "1.36.0", features = ["io-util", "test-util", "macros"] }
