[package]
name = "gday_file_offer_protocol"
version = "0.1.0"
authors = ["Marcin Anforowicz"]
edition = "2021"
description = "A protocol for peers to offer to send each other files."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_str_bytes = "7.0.0"
serde = "1.0.197"
serde_json = "1.0.115"
thiserror = "1.0.58"
