[package]
name = "gday_file_transfer"
description = "Protocol to securely transfer files over an encrypted IO stream."
homepage = "https://github.com/manforowicz/gday/tree/main/gday_file_transfer"
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_str_bytes = "7.0.0"
pin-project = "1.1.8"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-util"] }

[dev-dependencies]
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["macros"] }
