[package]
name = "gday_file_transfer"
description = "Protocol to securely transfer files over an encrypted IO stream."
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_str_bytes = "7.1.1"
pin-project = "1.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util"] }

[dev-dependencies]
dir-diff = "0.3.3"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "net", "time"] }
