[package]
name = "gday_gui"
description = "GUI to securely send files (without a relay or port forwarding)."
homepage = "https://github.com/manforowicz/gday/tree/main/gday_gui"
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eframe = "0.28.1"
egui = { version = "0.28.1", features = ["accesskit"] }
env_logger = "0.11.5"
gday_encryption = { version = "0.2.1", path = "../gday_encryption" }
gday_file_transfer = { version = "0.2.1", path = "../gday_file_transfer" }
gday_hole_punch = { version = "0.2.1", path = "../gday_hole_punch" }
log = "0.4.22"
rfd = "0.14.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
