[package]
name = "gday_hole_punch"
description = "Securely connect to a peer using TCP hole-punching."
homepage = "https://github.com/manforowicz/gday/tree/main/gday_hole_punch"
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gday_contact_exchange_protocol = { version = "^0.2.1", path = "../gday_contact_exchange_protocol" }
log = "0.4.22"
pin-project = "1.1.5"
rand = "0.8.5"
serde = "1.0.204"
sha2 = "0.10.8"
socket2 = { version = "0.5.7", features = ["all"] }
spake2 = { version = "0.4.0", features = ["std"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "rt", "time"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26.3"

[dev-dependencies]
gday_server = { path = "../gday_server" }
