[package]
name = "gday_hole_punch"
description = "Securely connect to a peer using TCP hole-punching."
categories = ["network-programming"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gday_contact_exchange_protocol = { version = "0.4.0", path = "../gday_contact_exchange_protocol" }
log = "0.4.27"
pin-project = "1.1.10"
rand = "0.9.1"
serde = "1.0.219"
sha2 = "0.10.9"
socket2 = { version = "0.5.10" }
spake2 = { version = "0.4.0", features = ["std"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["net", "rt", "time"] }
tokio-rustls = "0.26.2"
webpki-roots = "1.0.1"

[dev-dependencies]
gday_server = { version = "0.4.0", path = "../gday_server" }
