[package]
name = "gday_server"
description = "Server that lets 2 peers exchange their socket addresses."
homepage = "https://github.com/manforowicz/gday/tree/main/gday_server"
categories = ["command-line-utilities"]

# Inherit these keys from workspace toml
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
socket2 = { version = "0.5.8" }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-rustls = { version = "0.26.0" }
gday_contact_exchange_protocol = { version = "0.2.1", path = "../gday_contact_exchange_protocol" }
thiserror = "2.0.3"
log = "0.4.22"
env_logger = "0.11.5"
rustls-pemfile = "2.2.0"
